--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/helper-validator-identifier": "^7.12.11",
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/monda": "^0.1.0",
+    "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/blur": "^3.6.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
@@ -35,7 +36,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
